--- a/talks/base/base.jinja2
+++ b/talks/base/base.jinja2
@@ -30,6 +30,7 @@
     import Notes from 'reveal.js/plugin/notes/notes.esm.js';
     import Highlight from 'reveal.js/plugin/highlight/highlight.esm.js';
     import Zoom from 'reveal.js/plugin/zoom/zoom.esm.js';
+    import RevealMath from 'reveal.js/plugin/math/math.esm.js';
     import Reveal from 'reveal.js';
     {% block reveal_init %}
     Reveal.initialize({
@@ -44,7 +45,7 @@
       {% endif %}
       hash: true,
       slideNumber: true,
-      plugins: [ Markdown, Notes, Highlight, Zoom ]
+      plugins: [ Markdown, Notes, Highlight, Zoom, RevealMath.KaTeX ]
     });
     Reveal.configure({ pdfSeparateFragments: false });
     {% endblock %}
