--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -87,9 +87,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
 {% include "talks/quals/how_pt1-tidalsim_v1.jinja2" %}
 </section>
 
-<section>
 {% include "talks/quals/how_pt2-tidalsim_v2.jinja2" %}
-</section>
 
 <section>
 {% include "talks/quals/case_studies.jinja2" %}
@@ -98,6 +96,10 @@ import 'reveal.js/plugin/highlight/monokai.css'
 <section>
   <section class="center">
     <h2>7. Thesis Outline</h2>
+  This semester: v0.1 to v1
+  Summer: v1 to v2 (improvements in next section)
+  Next semester: Leverage v2 for case studies
+  Spring 2025: Finish thesis writing + graduate
   </section>
 
   <section>
