--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -177,7 +177,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
   </section>
 </section>
 
-<section>
+<section data-visibility="hidden">
   <h2>Conclusion</h2>
 
   <div class="container" style="grid-template-columns: 1fr 1.4fr;">
