--- a/talks/talks/quals/case_studies.jinja2
+++ b/talks/talks/quals/case_studies.jinja2
@@ -1,5 +1,13 @@
 <section class="center">
   <h2>6. Case Studies / Applications</h2>
+  <ol style="list-style-type: lower-alpha;">
+    <li class="fragment">Hardware parameter DSE / microarchitecture optimization</li>
+    <li class="fragment">Coverpoint synthesis for verification</li>
+  </ol>
+</section>
+
+<section>
+  <h2></h2>
 </section>
 
 <section>
